2024-06-16T12:36:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9536011118 # 349
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-16
* notice: last 14d: unq all: 12 91
* notice: prev accum: outdated-unq outdated-all / unq all: 694 3905 / 705 3982
* notice: next accum: outdated-unq outdated-all / unq all: 694 3905 / 706 3996
* notice: prev exec diff / last date diff / accum: unq all: +1 +14 -0 -0 / +1 +14 -0 -0 / 1 14
* notice: removed / changed dates: [] / [2024-06-16]

2024-06-15T01:25:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9524383192 # 346
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-15
* notice: last 14d: unq all: 11 77
* notice: prev accum: outdated-unq outdated-all / unq all: 694 3905 / 704 3978
* notice: next accum: outdated-unq outdated-all / unq all: 694 3905 / 705 3982
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [] / [2024-06-14]

2024-06-14T12:37:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9516240709 # 345
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-14
* notice: last 14d: unq all: 10 73
* notice: prev accum: outdated-unq outdated-all / unq all: 693 3904 / 704 3978
* notice: next accum: outdated-unq outdated-all / unq all: 694 3905 / 704 3978
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-31] / []

2024-06-13T12:37:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9499767136 # 343