@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-16T12:36:02Z",
-  "count_outdated" : 3905,
-  "uniques_outdated" : 694,
-  "count" : 3996,
-  "uniques" : 706,
+  "timestamp" : "2024-06-18T01:26:33Z",
+  "count_outdated" : 3913,
+  "uniques_outdated" : 696,
+  "count" : 4001,
+  "uniques" : 707,
   "views" : [
-    {
-      "timestamp": "2024-06-03T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 6, 8 ],
-      "count_decinc": [ 0, 8 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-06-05T00:00:00Z",
       "count": 4,
@@ -73,6 +64,15 @@
       "count": 14,
       "count_minmax": [ 14, 14 ],
       "count_decinc": [ 0, 14 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-17T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
+      "count_decinc": [ 0, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
